added the rounds

--- a/index.html
+++ b/index.html
@@ -87,21 +87,21 @@
 								<ul class="features">
 									<li>
 										<span class="icon major style1 fa-clipboard"></span>
-										<h3 class="sub-topics">Registration</h3>
+										<h3 class="sub-topics"> Initial Round</h3>
 										<p style="margin-bottom:5px"><strong>Open now</strong></p>
 										
 
-										<p style="margin-bottom:0px">Deadline- 20th November, 2016</p>
+										<p style="margin-bottom:0px">Start- 21st August, 2017</p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-code"></span>
-										<h3 class="sub-topics">Code Breaker</h3>
+										<h3 class="sub-topics">Idea selection and mentor pairing</h3>
 										<p style="margin-bottom:5px"><strong>Online Competition</strong></p>
-										<p>25th November (24 hours)</p>
+										<p>1st September</p>
 									</li>
 									<li>
 										<span class="icon major style5 fa-laptop"></span>
-										<h3 class="sub-topics">BeThem</h3>
+										<h3 class="sub-topics">Final Round</h3>
 										<p style="margin-bottom:5px"><strong>For selected 30 participants</strong></p>
 										<p>3rd December</p>
 									</li>
@@ -111,14 +111,21 @@
 
 							<section id="third" class="main special">
 								<header class="major">
-									<h2>Code Breaker</h2>
+									<h2>Initial Round</h2>
 								</header>
 								<p>The first phase of BeThem industry challenge compose of an online problem solving competition where your problem solving skills will be put to the test through a series of questions. The top 30 contestants will be selected to take part in our main event - BeThem full day interactive program at 99X Technology.</p>
 							</section>
 
 							<section id="fourth" class="main special">
 								<header class="major">
-									<h2>BeThem</h2>
+									<h2>Idea selection and mentor pairing</h2>
+								</header>
+								<p>You will be guided by a team of professionals at this one day program that will expose you into software industry where you could demonstrate your analytical, teamwork, presentation and technical skills. Your ability to <strong>step into the shoes of a Software Engineer and perform as one will be key to winning the competition.</strong></p>
+							</section>
+                        
+                        <section id="fourth" class="main special">
+								<header class="major">
+									<h2>Final Round</h2>
 								</header>
 								<p>You will be guided by a team of professionals at this one day program that will expose you into software industry where you could demonstrate your analytical, teamwork, presentation and technical skills. Your ability to <strong>step into the shoes of a Software Engineer and perform as one will be key to winning the competition.</strong></p>
 							</section>
