logo updated and color scheme changed

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 									</ul>
 								</footer>
 							</section>
-
+ 
 					</div>
 
 				<!-- Footer -->
@@ -157,12 +157,12 @@
 								<dt>Email: <a href="mailto:dotitude@99x.lk">dotitude@99x.lk</a></dt>
 								<dd></dd>
 							</dl>
-							<ul class="icons">
-								<li><a  target="_blank" href="https://www.facebook.com/Dotitude/?fref=ts" class="icon fa-facebook alt"><span class="label">Facebook</span></a></li>
+							<ul class="icons" style="color:black;">
+								<li><a  target="_blank" href="https://www.facebook.com/Dotitude/?fref=ts" style="color:black;" class="icon fa-facebook alt"><span class="label" style="color:black;">Facebook</span></a></li>
 							</ul>
 						</section>
 						<p class="copyright logo-powered">
-							<a target="_blank"  href="http://99xtechnology.com">Powered by,<br><img src="images/99x.png" width="200"></a></p> 
+							<a target="_blank"  href="http://99xtechnology.com">Powered by,<br><img src="images/logo-white.png" width="200"></a></p> 
 					</footer>
 
 			</div>
