--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 					<footer id="footer">
 						 <section class="copyright">
 							<dl >
-								<dt>For Information:<br>071 213 6826 - Rumesh <br>sssssssss</dt>
+								<dt>For Information:<br>071 213 6826 - Rumesh <br>077 162 9563 - Lakindu</dt>
 								<dd></dd>
 								<dt>Email: <a href="mailto:dotitude@99x.lk">dotitude@99x.lk</a></dt>
 								<dd></dd>
