Updated the content

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
 							<div id="clockdiv">
 										  <div>
 										    <span class="days"></span>
-										    <div class="smalltext">Days</div>
+										    <div class="smalltext" style="font-color:#D2691E">Days</div>
 										  </div>
 										  <div>
 										    <span class="hours"></span>
-										    <div class="smalltext">Hours</div>
+										    <div class="smalltext" style="font-color:#D2691E">Hours</div>
 										  </div>
 										  <div>
 										    <span class="minutes"></span>
-										    <div class="smalltext">Minutes</div>
+										    <div class="smalltext" style="font-color:#D2691E">Minutes</div>
 										  </div>
 										  <div>
 										    <span class="seconds"></span>
-										    <div class="smalltext">Seconds</div>
+										    <div class="smalltext" style="font-color:#D2691E">Seconds</div>
 										  </div>
 										</div>
 						<p style="margin-bottom:5px">Registration Deadline</p>
@@ -73,7 +73,7 @@
 										<header class="major">
 											<h2>Be a part of Hacktitude!</h2>
 										</header>
-										<p>Make the most of a once in a lifetime opportunity through ‘BeThem’, a unique programme spearheaded by 99X Technology to give you the chance to mingle and work with top industry professionals and gain one-to-one career guidance that will aid you in your future endeavours. This initiative has been launched with the objective of giving undergraduates firsthand exposure to the Software Engineering industry.</p>
+										<p>‘Hacktitude’ attempts to push university students to enhance their contributions to the open source community. So grab this once in a lifetime opportunity to contribute to the 99X open source repositories and based on your contributions win the chance to work one-on-one with some of the top industry professionals at 99X Technology.</p>
 									</div>
 									<span class="image"><img src="images/pic01.png" alt="" /></span>
 								</div>
@@ -96,14 +96,14 @@
 									<li>
 										<span class="icon major style3 fa-code"></span>
 										<h3 class="sub-topics">Idea selection and mentor pairing</h3>
-										<p style="margin-bottom:5px"><strong>Online Competition</strong></p>
-										<p>1st September</p>
+										<p style="margin-bottom:5px"><strong>For the top 10 Contributors</strong></p>
+										<p>4th September</p>
 									</li>
 									<li>
 										<span class="icon major style5 fa-laptop"></span>
 										<h3 class="sub-topics">Final Round</h3>
-										<p style="margin-bottom:5px"><strong>For selected 30 participants</strong></p>
-										<p>3rd December</p>
+										<p style="margin-bottom:5px"><strong>For Finalist Contributors</strong></p>
+										<p>9th September</p>
 									</li>
 								</ul>
 							</section>
@@ -113,21 +113,21 @@
 								<header class="major">
 									<h2>Initial Round</h2>
 								</header>
-								<p>The first phase of BeThem industry challenge compose of an online problem solving competition where your problem solving skills will be put to the test through a series of questions. The top 30 contestants will be selected to take part in our main event - BeThem full day interactive program at 99X Technology.</p>
+								<p>The initial phase of Hacktitude includes all you willing and interested university students contributing to the 99X open source repositories. Based on all your hard work and contributions, the top 10 students who have contributed the most would be selected for the next phase.</p>
 							</section>
 
 							<section id="fourth" class="main special">
 								<header class="major">
 									<h2>Idea selection and mentor pairing</h2>
 								</header>
-								<p>You will be guided by a team of professionals at this one day program that will expose you into software industry where you could demonstrate your analytical, teamwork, presentation and technical skills. Your ability to <strong>step into the shoes of a Software Engineer and perform as one will be key to winning the competition.</strong></p>
+								<p>Each of the top 10 contributors from the initial phase will then be individually mentored by one of 99X Technology’s senior professionals to work on their own ideas and create their own repositories based on such ideas.</strong></p>
 							</section>
                         
                         <section id="fourth" class="main special">
 								<header class="major">
 									<h2>Final Round</h2>
 								</header>
-								<p>You will be guided by a team of professionals at this one day program that will expose you into software industry where you could demonstrate your analytical, teamwork, presentation and technical skills. Your ability to <strong>step into the shoes of a Software Engineer and perform as one will be key to winning the competition.</strong></p>
+								<p>On completion of the idea generation and mentor pairing phase, these finalists would be given two weeks to work on their repositories under the guidance of their specific mentors. At the end of these two weeks, their repositories would be reviewed and the top 3 contributors would be selected and rewarded with prizes!</strong></p>
 							</section>
 
 							<!-- Registration  -->
@@ -136,9 +136,9 @@
 									<h2>Registration</h2>
 								</header>
 								<h3 class="sub-topics">Who can Apply</h3>
-								<p>If you are an energetic enthusiastic <strong>university undergraduate</strong> wishing for a career in the Software Engineering Industry,</br>then this your opportunity to apply for the “BeThem” competition and experience the life of a Software Engineering intern</br> at 99X Technology</p>
+								<p>If you are an energetic and enthusiastic <strong>university undergraduate</strong>looking to contribute to widen,</br>your horizons in the IT field,</br>hen this your chance to be part of Hacktitude as well as the open source community</br> at 99X Technology</p>
 								<h3 class="sub-topics">How to Apply</h3>
-								<p>Individuals who meet the above eligibility criteria can apply for the “BeThem” competition by simply clicking on the below registration link.</p>
+								<p>All those interested can register for Hacktitude by simply clicking on the link below to get kick started on this incredible journey.</p>
 								<footer class="major">
 									<ul class="actions">
 										<li><a href="https://goo.gl/forms/fPdvAXRfwerIwTUn2" target="_blank" style="    width: 250px;font-size:24px" class="button special"><b style="color:white">Apply Now!</b></a></li>
