--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
 						<ul>
 							<li><a href="#intro" class="active">Introduction</a></li>
 							<li><a href="#first">Timeline</a></li>
-							<li><a href="#third">Code Breaker</a></li>
-							<li><a href="#fourth">BeThem</a></li>
-						   <li><a  href="#second">Apply</a></li>
+							<li><a href="#third">Selection Rounds</a></li>
+						   	<li><a  href="#second">Apply</a></li>
 
 						</ul>
 					</nav>
