--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 		
 			<footer class="major">
 				<ul class="actions">
-					<li><a href="https://goo.gl/forms/fPdvAXRfwerIwTUn2" target="_blank" style="width:250px;font-size:24px" class="button special">
+					<li><a href="https://goo.gl/forms/fPdvAXRfwerIwTUn2" target="_blank" style="width:250px;font-size:24px" class="button special disabled">
 				    	<b style="color:white">Apply Now!</b></a>
 					</li>
 				</ul>
