--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
 							
 		<div id="clockdiv">
 			<div>
-			  <span class="days"></span>
+			  <span class="#">0</span>
 			  <div class="smalltext" style="color:#D2691E">Days</div>
 			</div>
 			<div>
-			  <span class="hours"></span>
+			  <span class="#">0</span>
 			  <div class="smalltext" style="color:#D2691E">Hours</div>
 			</div>
 			<div>
-			  <span class="minutes"></span>
+			  <span class="#">0</span>
 			  <div class="smalltext" style="color:#D2691E">Minutes</div>
 			</div>
 			<div>
-			  <span class="seconds"></span>
+			  <span class="#">0</span>
 			  <div class="smalltext" style="color:#D2691E">Seconds</div>
 			</div>
 		</div>
