--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang ="en">
   <head>
 	<title>Hacktitude - 99X Technology</title>
 	<meta charset="utf-8" />
@@ -48,7 +48,7 @@
 		</div>
 		<p style="margin-bottom:5px">Registration Deadline</p>
 
-	    </header>
+	    </header><!-- End of Header -->
 
 	    <!-- Nav -->
 	    <nav id="nav">
@@ -59,7 +59,7 @@
 		  <li><a  href="#second">Apply</a></li>
 
 		</ul>
-	     </nav>
+	     </nav> <!-- End of  Nav -->
 
 	     <!-- Main -->
 		<div id="main">
@@ -142,13 +142,14 @@
 			  <h3 class="sub-topics">How to Apply</h3>
 			  <p>All those interested can register for Hacktitude by simply clicking on the link below to get kick started on this incredible journey.</p>
 		
+			<!-- Footer  -->
 			<footer class="major">
 				<ul class="actions">
 					<li><a href="https://goo.gl/forms/fPdvAXRfwerIwTUn2" target="_blank" style="width:250px;font-size:24px" class="button special disabled">
 				    	<b style="color:white">Apply Now!</b></a>
 					</li>
 				</ul>
-			</footer>
+			</footer><!-- End of Footer  -->
 		</section>
  
 		</div>
@@ -170,7 +171,7 @@
 			</section>
 				<p class="copyright logo-powered">
 				<a target="_blank"  href="http://99xtechnology.com">Powered by,<br><img src="images/logo-white.png" width="200"></a></p> 
-		</footer>
+		</footer><!--End of  Footer -->
 		</div>
 
 		<!-- Scripts -->
